[home][s]: One more go at fixing the logo bug - set  vertical alignment to base..

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body 
-  font-family 'Lato', sans-serif;
+  font-family 'Lato', sans-serif
   max-width: 1920px
   margin 0 auto
   color black
@@ -25,12 +25,9 @@ body
   color:black;
 }
 
-img.logo {
-  display: inline-block;
-  margin: -2.2rem;
-  padding-left: 2rem;
+.navbar a {
+  vertical-align: baseline!important;  
 }
-
 
 p > span, h1, h2, h3 {
   font-weight: 500;
